# HackEm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: assembler.cpp.28AA15552C5BC7AD.idx  assembler.h.0CF56CE94BF32735.idx  cxxopts.hpp.3E261A6C3B5A87E5.idx  emulator.cpp.0E5E14261037DC0A.idx  emulator.h.4C440C0761B904D7.idx  file.cpp.60A8148DD336A9B6.idx  file.h.D5F2C2A44EB07B33.idx  glad.c.A1CD3A50E8F3D410.idx  glad.h.B7108D2F04ADA0DF.idx  khrplatform.h.D0BEBC920C2F953B.idx  main.cpp.5D749900485D5539.idx  main.cpp.CD26E9B7702AC1C2.idx  renderer.cpp.80B65A63C3ABDE77.idx  renderer.h.F26B6068CF0AC9FE.idx
common/: CMakeLists.txt
common/include/util/: file.h
common/src/util/: file.cpp
docs/: COMPILATION.md
examples/: bios.asm  loop.asm  mul.asm  mul.hack
examples/bios/: bios.asm  build.bash  font.asm  generate_font.py  main.asm
hack/: CMakeLists.txt  test.hack
hack/SDL/src/events/: SDL_events.c
hack/SDL/src/file/: SDL_rwops.c
hack/SDL/src/joystick/: controller_list.h  controller_type.c  controller_type.h
hack/SDL/src/video/khronos/vulkan/: vk_platform.h  vulkan.h  vulkan_core.h
hack/include/glad/: glad.h
hack/src/: Hack.cpp  Hack.h  glad.c  hack.c  hack.h  main.cpp
hacka/: CMakeLists.txt
hacka/include/: assembler.h
hacka/src/: assembler.cpp  main.cpp
hackc/: CMakeLists.txt
hackc/src/: Assembler.cpp  assembler.cpp  main.cpp
hacke/: CMakeLists.txt
hacke/include/: emulator.h  renderer.h
hacke/include/glad/: glad.h
hacke/src/: emulator.cpp  glad.c  main.cpp  renderer.cpp
